ExecutorThread (#93)
* ExecutorThread

* ExecutorThread

---------

Co-authored-by: Chris Faulkner <chris.faulkner@digital.homeoffice.gov.uk>