@@ -90,6 +90,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.2.2</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -98,10 +101,7 @@
 				<configuration>
 					<source>21</source>
 					<target>21</target>
-					<compilerArgs>
-<!--						<arg>&#45;&#45;add-exports</arg>-->
-<!--						<arg>java.base/jdk.internal=ALL-UNNAMED</arg>-->
-					</compilerArgs>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 
